--- a/views/config.ejs
+++ b/views/config.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/output.css" type="text/css" />
     <title>System Configuration</title>
 </head>
-<body class="bg-white w-full h-[100vh] p-0 m-0 flex flex-row">
+<body class="bg-white w-full h-[100vh] p-0 m-0 flex flex-row overflow-x-hidden">
         <%- include('components/navigation'); %>
         <div class="flex flex-col w-full">
             <%- include('components/header'); %>
