--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,10 +25,12 @@
                 </div>
                 <div class="flex flex-row justify-between mt-3">
                     <div class="inline-flex items-center">
-                        <label class="flex items-center cursor-pointer relative" for="check-2">
-                            <input id="rememberMe" type="checkbox"
+                        <label class="flex items-center cursor-pointer relative" for="rememberMe">
+                            <input 
+                            id="rememberMe" 
+                            type="checkbox"
                             class="peer h-5 w-5 cursor-pointer transition-all appearance-none rounded shadow hover:shadow-md border border-slate-300 checked:bg-slate-800 checked:border-slate-800"
-                            id="check-2" />
+                            />
                             <span class="absolute text-white opacity-0 peer-checked:opacity-100 top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-3.5 w-3.5" viewBox="0 0 20 20" fill="currentColor"
                                 stroke="currentColor" stroke-width="1">
@@ -38,11 +40,12 @@
                             </svg>
                             </span>
                         </label>
-                        <label class="cursor-pointer ml-2 text-slate-600 text-sm" for="check-2">
+                        <label class="cursor-pointer ml-2 text-slate-600 text-sm" for="rememberMe">
                             Remember Me
                         </label>
-                    </div>
-                    <p class="text-sm text-red-500 font-medium cursor-pointer">Forgot Password?</p>
+                        </div>
+
+                    <p class="hidden text-sm text-red-500 font-medium cursor-pointer">Forgot Password?</p>
                 </div>
                 
                 <button type="submit" class="mt-5 flex py-3 px-10 bg-blue-700 text-white font-semibold text-sm items-center justify-center  flex-row rounded-lg hover:bg-blue-200">
