--- a/views/components/forms.ejs
+++ b/views/components/forms.ejs
@@ -3,7 +3,7 @@
     <!-- add product -->
     <form id="addproductForm" class="bg-white p-5 rounded-2xl w-md overflow-y-auto">
         <div class="mb-5 flex flex-row justify-between">
-            <div class="text-gray-900 font-semibold text-xl">Add Product</div>
+            <div class="text-gray-900 font-semibold text-xl">Product</div>
             <svg id="close_addproductForm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="text-gray-900 w-5 h-5" fill="currentColor"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
         </div>
         <div class="mb-5 hidden">
@@ -31,6 +31,11 @@
                 placeholder="Silver" 
                 required></textarea>
 
+        </div>
+
+        <div class="mb-5">
+            <label for="stocks_val" class="block mb-2 text-sm font-medium text-gray-900 ">Stocks</label>
+            <input type="number" id="stocks_val" name="stocks_val" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:placeholder-gray-400 " placeholder="100" />
         </div>
 
         <div class="mb-5">
@@ -101,6 +106,7 @@
                 </button>
             </div>
             
+            <span id="imagecounttxt" class="mb-2 bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-sm"></span>
             <video id="camera" autoplay playsinline class="hidden w-full"></video>
             <div class="flex flex-row w-full overflow-x-auto" id="preview"></div>
             
