--- a/views/components/products.ejs
+++ b/views/components/products.ejs
@@ -64,7 +64,12 @@
               <path d="M137.4 41.4c12.5-12.5 32.8-12.5 45.3 0l128 128c9.2 9.2 11.9 22.9 6.9 34.9s-16.6 19.8-29.6 19.8L32 224c-12.9 0-24.6-7.8-29.6-19.8s-2.2-25.7 6.9-34.9l128-128zm0 429.3l-128-128c-9.2-9.2-11.9-22.9-6.9-34.9s16.6-19.8 29.6-19.8l256 0c12.9 0 24.6 7.8 29.6 19.8s2.2 25.7-6.9 34.9l-128 128c-12.5 12.5-32.8 12.5-45.3 0z"/>
             </svg>
           </th>
-
+          <th scope="col" data-sort="usage" class="relative px-6 py-3 w-[100px] cursor-pointer select-none">
+            <span class="pr-6">Stocks</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="absolute right-2 top-1/2 -translate-y-1/2 w-4 h-4 pointer-events-none">
+              <path d="M137.4 41.4c12.5-12.5 32.8-12.5 45.3 0l128 128c9.2 9.2 11.9 22.9 6.9 34.9s-16.6 19.8-29.6 19.8L32 224c-12.9 0-24.6-7.8-29.6-19.8s-2.2-25.7 6.9-34.9l128-128zm0 429.3l-128-128c-9.2-9.2-11.9-22.9-6.9-34.9s16.6-19.8 29.6-19.8l256 0c12.9 0 24.6 7.8 29.6 19.8s2.2 25.7-6.9 34.9l-128 128c-12.5 12.5-32.8 12.5-45.3 0z"/>
+            </svg>
+          </th>
           <th data-sort="image_path" class="relative px-6 py-3 w-[150px] cursor-pointer select-none">
             <span class="pr-6">Image</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="absolute right-2 top-1/2 -translate-y-1/2 w-4 h-4 pointer-events-none">
@@ -104,13 +109,14 @@
 
           </td>
           <td class="px-6 py-4 w-[150px] overflow-x-auto whitespace-nowrap hide-scrollbar"></td>
+          <td class="px-6 py-4 w-[150px] overflow-x-auto whitespace-nowrap hide-scrollbar"></td>
           <td class="px-6 py-4 w-[150px] overflow-x-auto whitespace-nowrap hide-scrollbar">
 
           </td>
           <td class="px-6 py-4 w-[100px] overflow-x-auto whitespace-nowrap hide-scrollbar">
 
           </td>
-          <td class="px-6 py-4 w-[100px]">
+          <td class="px-6 py-4 w-[150px]">
 
           </td>
         </tr>
