--- a/views/components/assistant.ejs
+++ b/views/components/assistant.ejs
@@ -71,7 +71,7 @@
     <div class="w-[50%] overflow-y-scroll">
         <div class="mt-5 flex flex-row gap-2">
             <div class="w-full">
-                <form class="w-full" onsubmit="return false;">
+                <form class="hidden w-full" onsubmit="return false;">
                     <label for="restrictions" class="block mb-2 text-sm font-medium text-gray-900">Select a restriction</label>
                     <select id="restrictions" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                         <option selected disabled>Choose</option>
@@ -80,7 +80,7 @@
             </div>
         </div>
 
-        <span for="restrict_selected" class="block mb-2 text-sm font-medium text-gray-900 mt-5">Restrictions</span>
+        <span for="restrict_selected" class="block mb-2 text-sm font-medium text-gray-900 mt-5">Objectives</span>
         <div class="flex flex-row items-center justify-start gap-2 overflow-hidden flex-wrap pb-[100px]" id="badge-container"></div>
         </div>
 </div>
