--- a/views/index.ejs
+++ b/views/index.ejs
@@ -142,7 +142,7 @@
                 </p>
                 <a
                     href="#"
-                    class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
+                    class="hidden  items-center px-3 py-2 text-sm font-medium text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
                 >
                     Know more
                     <svg
