--- a/views/components/products.ejs
+++ b/views/components/products.ejs
@@ -12,7 +12,7 @@
     <div class="flex flex-row items-center mt-5 gap-0">
       <div class="inline-flex rounded-full shadow-xs" role="group">
               <button id="AddProductNavBTN" type="button" class="h-10 gap-2 inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-full hover:bg-gray-100 hover:text-blue-700 ">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-3 h-3" fill="currentColor"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"/></svg>
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-3 h-3" fill="currentColor"><path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"/></svg>
                   Add Products
               </button>
               <button id="trainModelBTN" type="button" class="hidden flex h-10 gap-2 items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-e-full hover:bg-gray-100 hover:text-blue-700 ">
@@ -34,8 +34,8 @@
 
 
 
-  <div class="max-h-[700px] overflow-y-auto w-full">
-    <table class="w-full table-fixed text-sm text-left rtl:text-right text-gray-500 mt-5">
+  <div class="max-h-[700px] overflow-y-auto w-full overflow-x-scroll">
+    <table class="w-fit table-fixed text-sm text-left rtl:text-right text-gray-500 mt-5">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50">
         <tr>
           <th scope="col" data-sort="id" class="relative gap-2 px-3 py-3 w-12 cursor-pointer select-none">
@@ -91,7 +91,7 @@
             </svg>
           </th>
 
-          <th scope="col" class="px-6 py-3 w-[100px]">Action</th>
+          <th scope="col" class="px-6 py-3 w-[300px]">Action</th>
         </tr>
       </thead>
       <tbody id="productsTable">
