--- a/views/index.ejs
+++ b/views/index.ejs
@@ -119,49 +119,46 @@
         </div>
 
         <!-- product list -->
-        <div class="product-list-container hidden fixed top-0 left-5 w-fit h-screen bg-none items-center justify-center">
+        <div class="product-list-container hidden fixed top-0 left-5 w-fit h-screen bg-none items-center justify-center z-100">
             <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm">
                 <a href="#">
                     <img
                         src="https://placehold.co/600x400"
-                        class="product-image block w-[600px] h-[400px] object-cover rounded-lg"
+                        class="product-image block w-[250px] h-[200px] object-cover rounded-lg"
                         alt="..."
                     />
                 </a>
                 <div class="p-5">
-                <a href="#" class="flex flex-row gap-2 items-center">
-                    <h5 class="product-name mb-2 text-2xl font-bold tracking-tight text-gray-900">
-                    Product Name
-                    </h5>
+                    <a href="#" class="flex flex-row gap-2 items-center">
+                        <h5 class="product-name mb-2 text-sm font-bold tracking-tight text-gray-900">
+                        Product Name
+                        </h5>
 
-                    <span class="product-price bg-green-100 text-green-800 text-xl font-medium px-2.5 py-0.5 rounded-sm">Price</span>
+                        <span class="product-price bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded-sm">Price</span>
 
-                </a>
-                <p class="product-description mb-3 font-normal text-gray-700">
-                    product-description
-                </p>
-                <a
-                    href="#"
-                    class="inline-flex items-center px-3 py-2 text-sm font-medium text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300"
-                >
-                    Know more
-                    <svg
-                    class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 14 10"
-                    >
-                    <path
-                        stroke="currentColor"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="M1 5h12m0 0L9 1m4 4L9 9"
-                    />
-                    </svg>
-                </a>
+                    </a>
+                    <p class="product-description mb-3 font-normal tex-xs text-gray-700">
+                        product-description
+                    </p>
+                    
                 </div>
+            </div>
+
+            <div id="productvaruantparent" class="flex flex-col absolute left-70 min-w-sm min-h-sm bg-white border border-gray-200 rounded-lg shadow-sm z-50 p-5">
+                <p class="text-black font-semibold text-xs mb-2">Product Variants</p>
+                <div id="productvariantscontainer" class="max-h-[300px] overflow-y-auto flex flex-col gap-3">
+                    <div class="flex flex-col border border-gray-200 rounded-md p-2">
+                        <div class="flex flex-row gap-2">
+                            <p class="text-xs font-normal text-gray-500">Name: </p>
+                            <p class="text-xs font-semibold text-black">Name of the varaint</p>
+                        </div>
+                        <div class="flex flex-row gap-2">
+                            <p class="text-xs font-normal text-gray-500">Description: </p>
+                            <p class="text-xs font-semibold text-black">Description of the varaint</p>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
